--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,29 @@
-{  
-  "name": "triadev/laravel-prometheus-exporter",
-  "description": "A laravel service provider to export metrics.",
-  "keywords": ["Laravel", "Prometheus", "Metrics"],
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Christopher Lorke",
-      "email": "christopher.lorke@gmx.de"
+{
+    "name": "triadev/laravel-prometheus-exporter",
+    "description": "A laravel service provider to export metrics.",
+    "keywords": ["Laravel", "Prometheus", "Metrics"],
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Christopher Lorke",
+            "email": "christopher.lorke@gmx.de"
+        }
+    ],
+    "require": {
+        "php": ">=7.0",
+        "laravel/framework": "5.4.*",
+        "jimdo/prometheus_client_php": "^0.7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^5.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "Triadev\\PrometheusExporter\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "classmap": []
     }
-  ],
-  "require": {
-    "php": ">=7.0",
-    "laravel/framework": "5.4.*"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^5.6"
-  },
-  "autoload": {
-    "psr-4": {
-      "Triadev\\LaravelPrometheusExporter\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "classmap": []
-  }
 }
 
