Added the psr-4 link to the test abstraction of laravel.

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         }
     },
     "autoload-dev": {
-        "classmap": []
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     }
 }
 
