Install apc in the travis ci pipeline.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: php
 php:
-  - '7.0'
-  - '7.1'
+    - '7.0'
+    - '7.1'
 install:
-  composer install --no-interaction
+    composer install --no-interaction
 before_script:
-  - pecl install apcu apcu_bc-beta
-  - cat /usr/local/etc/php/php.ini
-  - echo "extension=apcu.so" >> /usr/local/etc/php/php.ini
-  - echo "extension=apc.so" >> /usr/local/etc/php/php.ini
-  - echo "apc.enable_cli=1" >> /usr/local/etc/php/php.ini
+    phpenv config-add php.ini
 script:
-  phpunit --group=PrometheusExporter --configuration phpunit.xml
+    phpunit --group=PrometheusExporter --configuration phpunit.xml
