--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ install:
     composer install --no-interaction
 before_script:
     - pecl install apcu apcu_bc-beta
-    - phpenv config-add php.ini
+    - echo "extension = apcu.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    - echo "extension=apc.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    - echo "apc.enable_cli=1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 script:
     - phpunit --group=PrometheusExporter --configuration phpunit.xml
