Install apc in the travis ci pipeline.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
 install:
     composer install --no-interaction
 before_script:
-    - pecl install --force-yes apcu apcu_bc-beta
+    - pecl install -y apcu apcu_bc-beta
     - echo "extension = apcu.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - echo "extension=apc.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - echo "apc.enable_cli=1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
