--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,11 @@ before_script:
     - echo "extension = apcu.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - echo "extension=apc.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
     - echo "apc.enable_cli=1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+    - apt-get update
+    - apt-get install -y wget
+    - wget https://phar.phpunit.de/phpunit-5.7.9.phar
+    - chmod +x phpunit-5.7.9.phar
+    - mv phpunit-5.7.9.phar /usr/local/bin/phpunit
+    - phpunit --version
 script:
     phpunit
