--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "^5.4",
         "jimdo/prometheus_client_php": "^0.7.0"
     },
     "require-dev": {
