--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,20 @@
         "jimdo/prometheus_client_php": "^0.7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.6"
+        "phpunit/phpunit": "~7.0",
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "~1.0"
     },
     "autoload": {
         "psr-4": {
             "Triadev\\PrometheusExporter\\": "src/"
         }
+    },
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true,
+        "secure-http": false
     }
 }
 
