--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ after_success:
     - bash <(curl -s https://codecov.io/bash)
 
 branches:
-    only: master
+    only:
+        - master
 
 cache:
     directories:
