--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "triadev/laravel-prometheus-exporter",
     "description": "A laravel service provider to export metrics.",
-    "keywords": ["Laravel", "Prometheus", "Metrics"],
+    "keywords": [
+        "Laravel",
+        "Prometheus",
+        "Metrics"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -11,17 +15,35 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "^5.4",
-        "jimdo/prometheus_client_php": "^0.7.0"
+        "illuminate/support": "^5.3",
+        "jimdo/prometheus_client_php": "^0.7"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "~1.0"
+        "mockery/mockery": "~1.0",
+        "orchestra/testbench": "~3.0",
+        "laravel/laravel": "^5.6"
+    },
+    "suggest": {
+        "ext-redis": "Required if using Redis.",
+        "ext-apc": "Required if using APCu."
     },
     "autoload": {
         "psr-4": {
             "Triadev\\PrometheusExporter\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/"
+        ]
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Triadev\\PrometheusExporter\\Provider\\PrometheusExporterServiceProvider"
+            ]
         }
     },
     "config": {
