--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 
-sudo: false
+sudo: true
 
 services:
     - docker
@@ -25,14 +25,11 @@ before_script:
 
 script:
     - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+    - ./vendor/bin/phpcs --standard=PSR2 src --ignore=src/Database/**,src/Config/* --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1
 
 after_success:
     - travis_retry php coveralls.phar -v
     - bash <(curl -s https://codecov.io/bash)
-
-branches:
-    only:
-        - master
 
 cache:
     directories:
