--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "orchestra/testbench": "~3.0",
-        "laravel/framework": "^5.5"
+        "laravel/framework": "^5.5",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "suggest": {
         "ext-redis": "Required if using Redis.",
