--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 php:
     - 7.1
     - 7.2
+    - 7.3
 
 install:
     - travis_retry composer install --no-interaction --no-suggest
@@ -25,7 +26,7 @@ before_script:
 
 script:
     - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
-    - ./vendor/bin/phpcs --standard=PSR2 src --ignore=src/Database/**,src/Config/* --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1
+    - composer check-style
 
 after_success:
     - travis_retry php coveralls.phar -v
