--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,16 @@
     ],
     "require": {
         "php": ">=7.2",
-        "illuminate/support": "^5.6|^6.0",
-        "jimdo/prometheus_client_php": "^0.9.1"
+        "endclothing/prometheus_client_php": "^1.0",
+        "illuminate/support": "^5.6|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "orchestra/testbench": "~3.0",
-        "laravel/framework": "5.6|5.7|5.8|6.0",
-        "laravel/lumen-framework": "5.6|5.7|5.8|6.0",
+        "laravel/framework": "^5.6|^6.0",
+        "laravel/lumen-framework": "^5.6|^6.0",
         "squizlabs/php_codesniffer": "^3.0"
     },
     "suggest": {
@@ -62,4 +62,3 @@
         "fix-style": "phpcbf -p --standard=PSR2 src --ignore=src/Database/**,src/Config/*"
     }
 }
-
